website/main-pages/ballerina.io-website-theme/samples/taint-analysis.out
error: ./taint-analysis.bal:8:21: tainted value passed to sensitive parameter 'secureParameter'
error: ./taint-analysis.bal:19:21: tainted value passed to sensitive parameter 'secureParameter'
compilation contains errors
